[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mcpgateway-retry-with-backoff"
version = "0.1.0"
description = "Rust-accelerated retry state manager for ContextForge"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

[tool.maturin]
# The Python module name: `import retry_with_backoff_rust`
module-name = "retry_with_backoff_rust"
python-source = "python"
features = ["pyo3/extension-module"]
