[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mcpgateway-url-reputation"
version = "0.1.1"
description = "High-performance URL reputation validation for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "url_reputation_rust"
features = ["pyo3/extension-module"]
