[package]
name = "mcp_stdio_wrapper"
version = "1.0.0-BETA-1"
edition = "2024"
default-run = "mcp_stdio_wrapper"
license = "Apache-2.0"

[dependencies]
dotenvy = "0.15.7"
flume = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.54", features = ["derive","env"] }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json", "stream","http2"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
futures = "0.3.31"
http = "1.4.0"
serde_json = "1.0.149"
jsonrpc-core = "18.0.0"
actson = "2.1.0"
tracing-appender = "0.2.4"
toml = "0.9.11"
libc = "0.2"
indexmap = "2.7.0"
bytes = "1.11.1"
nom = "7"
tempfile = "3.24.0"
base64 = "0.22.1"
arc-swap = "1.8.1"
mimalloc = "0.1.48"
time = "0.3.47"

[dev-dependencies]
mockito = "1.7.1"
tokio-test = "0.4.5"
tracing-test = "0.2.5"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
