[project]
name = "chunker-server"
version = "2.0.0"
description = "Advanced text chunking MCP server with multiple strategies and configurable options"
authors = [
  { name = "Mihai Criveti", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]
langchain = [
    "langchain-text-splitters>=1.1.0",
]
nlp = [
    "nltk>=3.9.2",
    "spacy>=3.8.11",
]
full = [
    "langchain-text-splitters>=1.1.0",
    "nltk>=3.9.2",
    "spacy>=3.8.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chunker_server"]

[project.scripts]
chunker-server = "chunker_server.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=chunker_server --cov-report=term-missing"
