[project]
name = "data-analysis-server"
version = "0.1.0"
description = "MCP server for comprehensive data analysis capabilities"
authors = [
    {name = "MCP Context Forge", email = "noreply@example.com"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "mcp>=1.25.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_analysis_server"]

[project.scripts]
data-analysis-server = "data_analysis_server.server:main"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "B", "I", "N", "UP", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=data_analysis_server --cov-report=term-missing"
