[project]
name = "docx-server"
version = "2.0.0"
description = "Comprehensive Python MCP server for creating and editing Microsoft Word (.docx) documents"
authors = [
  { name = "Mihai Criveti", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_server"]

[project.scripts]
docx-server = "docx_server.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=docx_server --cov-report=term-missing"
