[project]
name = "mcp-rss-search"
version = "1.0.0"
description = "MCP server for advanced RSS feed parsing, searching, and analysis"
authors = [
  { name = "MCP Context Forge", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
similarity = [
    "numpy>=2.4.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.13",
]
full = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.13",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rss_search"]

[project.scripts]
mcp-rss-search = "mcp_rss_search.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=mcp_rss_search --cov-report=term-missing"
