[project]
name = "synthetic-data-server"
version = "2.0.0"
description = "FastMCP server for generating high quality synthetic tabular datasets"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mihai Criveti", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "faker>=38.2.0",
    "fastmcp>=2.14.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_data_server"]

[project.scripts]
synthetic-data-server = "synthetic_data_server.server_fastmcp:main"
